# zhalt

./: Cargo.toml  LICENSE  README.md
dummy-feature/: Cargo.toml
src/: args.rs  main.rs  utils.rs
src/os/: linux.rs  macos.rs  windows.rs
