[package]
name = "zhalt"
version = "0.1.4"
edition = "2024"

[dependencies]
dummy_feature = { path = "dummy-feature", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Ime"] }

[features]
default = []

fcitx5 = ["dummy_feature"]
ibus = ["dummy_feature"]
